# MADS-ML-JelleB

./: .pdm-python  README.md  pyproject.toml
hypertune_experiment_notebook/: Script.ipynb  mlflow.db
hypertune_experiment_notebook/configs/: experiment_2_1.gin  experiment_2_2.gin  experiment_2_3.gin  experiment_2_4.gin  experiment_2_5.gin  experiment_2_6.gin  experiment_2_7.gin  experiment_2_8.gin  experiment_2_9.gin
hypertune_experiment_notebook/gestures_experiments/: 20240530-1452model.pt  20240530-1459model.pt  20240530-1502model.pt  20240530-1548model.pt  20240530-1551model.pt  20240530-1554model.pt  20240530-1557model.pt  20240530-1559model.pt  20240530-1602model.pt  20240603-1827model.pt  20240603-1901model.pt  20240603-1903model.pt  20240603-2013model.pt  20240603-2016model.pt  20240603-2020model.pt  20240603-2023model.pt  20240603-2026model.pt  20240603-2029model.pt  20240603-2032model.pt  20240603-2036model.pt  20240603-2041model.pt
hypertune_experiment_notebook/gestures_experiments/20240530-144741/: checkpoint.pt
hypertune_experiment_notebook/gestures_experiments/20240530-145208/: events.out.tfevents.1717073528.Jelles_Laptopje.21860.1
hypertune_experiment_notebook/gestures_experiments/20240530-145940/: checkpoint.pt  events.out.tfevents.1717073980.Jelles_Laptopje.21860.2
hypertune_experiment_notebook/gestures_experiments/20240530-150251/: checkpoint.pt  events.out.tfevents.1717074171.Jelles_Laptopje.21860.3
hypertune_experiment_notebook/gestures_experiments/20240530-154800/: checkpoint.pt
(+50 files in other folders)
