[project]
name = "MADS-ML-JelleB"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "CodingJelle", email = "jellevbarneveld@hotmail.com"},
]
dependencies = [
    "torch>=2.3.0",
    "ipykernel>=6.29.4",
    "mads-datasets>=0.3.10",
    "mltrainer>=0.1.10",
    "ray>=2.23.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
